@@ -2,6 +2,8 @@ Revision history for DBIx::Class
 
     * New Features / Changes
         - Issue a warning when DateTime objects are passed to ->search
+        - Fast populate() in void context is now even more efficient by
+          going directly through execute_for_fetch bypassing execute_array
 
     * Fixes
         - Fix SkipFirst and FirstSkip limit dialects (Informix and Firebird)
